Moved math eq. from README

--- a/EvolutionaryCity.ipynb
+++ b/EvolutionaryCity.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Description \n",
+    "\n",
+    "* The model uses a payoff function of the form $$Ern  - cn^2$$, \n",
+    "    - $E$ is Shannon Entropy within a cell. We use the following discretized form with agents divided into $g$ number of groups       based on their ability levels. $$E = -\\sum_{i=1}^{i=g}p_i\\log_ep_i, \\text{where } p_i=\\frac{\\text{No. of occurences of agent of Type i in a cell}}{\\text{No. of agents in the city/cell}}$$ \n",
+    "    - $r$ is the ability of an agent where $r\\in(0,1)$ and drawn from a uniform distribution.\n",
+    "    - The ability level domain is divided into $g$ equal intervals with size $\\frac{1}{g}$ and agents are classified as $\\text{Type }1$ if $r\\in(0,\\frac{1}{g})$, $\\text{Type }2$ if $r\\in(\\frac{1}{g},\\frac{2}{g})$ and so on. So for $g=4$, an agent with $r=0.66$ is a $\\text{Type }3$ agent as $0.66\\in(0.5,0.75)$. \n",
+    "    - $n$ is the number of agents in the cell and $c$ is a constant.\n",
+    "\n",
+    "    \n",
+    "* The model space is **20x20** size Multigrid allowing multiple agents to be present in a cell/city.\n",
+    "\n",
+    "* Agents use bounded rationality. Each agent is initialized with attribute **radius** which defines the maximum number of cells it considers while making a move. The radius is defined in a way s.t higher ability agents are more mobile than lower ability agents. This is done by having the radius drawn from a scaled beta distribution $\\beta(a,b)$ with shape parameters $a=r\\text{ , }b=1-r$. So for higher $r$ the distribution is skewed to right meaning a greater chance of having larger values and vice-versa. The scaling factor is 10, which is half of our grid size. The distribution of radius is illustrated below.\n",
+    "\n",
+    "* The model takes the total number of agents in all cities *'$N$'*, negative coefficient *'$c$'* and number of skill groups \n",
+    "'$g$'* as inputs. The model also takes agent activation schedule as an input to test Random and Simulataneous activation of agents at each step. Pass **activation = 0** for Random Activation and **activation = 1** for Simultaneous Activation.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
